--- a/Lab_5/App.xaml
+++ b/Lab_5/App.xaml
@@ -2,8 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Lab_5"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MVVM/View/MainWindow.xaml">
+    
     <Application.Resources>
-         
+        
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="Themes/ButtonTheme.xaml"/>
+
+                <ResourceDictionary Source="Themes/ToggleButtonTheme.xaml"/>
+
+                <ResourceDictionary Source="Themes/RadioButtonTheme.xaml"/>
+
+                <ResourceDictionary Source="Themes/TextBoxTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
