--- a/Lab_5/App.xaml
+++ b/Lab_5/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Lab_5"
+             xmlns:view="clr-namespace:Lab_5.MVVM.View"
+             xmlns:viewModel="clr-namespace:Lab_5.MVVM.ViewModel"
              StartupUri="MVVM/View/MainWindow.xaml">
     
     <Application.Resources>
@@ -12,12 +14,14 @@
 
                 <ResourceDictionary Source="Themes/ButtonTheme.xaml"/>
 
-                <ResourceDictionary Source="Themes/ToggleButtonTheme.xaml"/>
-
                 <ResourceDictionary Source="Themes/RadioButtonTheme.xaml"/>
 
                 <ResourceDictionary Source="Themes/TextBoxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:MainViewModel}">
+                <view:MainWindow/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
