--- a/Lab_5/Themes/ToggleButtonTheme.xaml
+++ b/Lab_5/Themes/ToggleButtonTheme.xaml
@@ -1,17 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
-    <Style BasedOn="{StaticResource {x:Type RadioButton}}"
-           TargetType="{x:Type RadioButton}"
-           x:Key="RadioButtonTheme">
+
+    <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
+           TargetType="{x:Type ToggleButton}"
+           x:Key="ToggleButtonTheme">
         
         <Style.Setters>
             
             <Setter Property="Template">
                 
                 <Setter.Value>
-                    
-                    <ControlTemplate TargetType="RadioButton">
+
+                    <ControlTemplate TargetType="ToggleButton">
                         
                         <Border Background="{TemplateBinding Background}" 
                                 CornerRadius="10">
